fix get_resource_records_by_domain_name return array
https://github.com/mdsina/selectel-dns-api/pull/1
