# selectel_dns_api/apis/records_api.py
@@ -486,7 +486,7 @@ class RecordsApi(object):
         :param callback function: The callback function
             for asynchronous request. (optional)
         :param str domain_name: name of domain (required)
-        :return: Record
+        :return: list[Record]
                  If the method is called asynchronously,
                  returns the request thread.
         """
@@ -512,7 +512,7 @@ class RecordsApi(object):
         :param callback function: The callback function
             for asynchronous request. (optional)
         :param str domain_name: name of domain (required)
-        :return: Record
+        :return: list[Record]
                  If the method is called asynchronously,
                  returns the request thread.
         """
@@ -565,7 +565,7 @@ class RecordsApi(object):
                                         body=body_params,
                                         post_params=form_params,
                                         files=local_var_files,
-                                        response_type='Record',
+                                        response_type='list[Record]',
                                         auth_settings=auth_settings,
                                         callback=params.get('callback'),
                                         _return_http_data_only=params.get('_return_http_data_only'),
